# Py_tour

./: .gitignore  README.md  main.py  py_test.py  pyproject.toml  test.ipynb
Doc/about git/: DELETE_COMMITS.md  DELETE_COMMITS1.md  RESTORE_UV_COMMIT.md
test/: py_test.py
